fixed z-index on share buttons

--- a/style.css
+++ b/style.css
@@ -12,9 +12,8 @@
 .help {
   text-align: center;
   position: absolute;
-  bottom: 10px;
+  bottom: 20px;
   left: 0; right: 0;
-  z-index: -1;
 }
 
 @media (max-width: 480px) {
